2011-07-26  Sergio Martin <sergio.martin@artica.es>

	* pandoradb_data.sql
	pandoradb.data.postgreSQL.sql
	pandoradb.data.oracle.sql: Set as default
	the language of the admin when install

	* include/config_process.php
	include/functions.php
	index.php
	operation/users/user_edit.php
	general/pandora_help.php
	godmode/users/configure_user.php: Added default
	option in the language combo when edit a user. If
	this option is choose, this user will has the 
	general setup language
	Fixed too the problem of the help screens language
	Bug: 3375174 

2011-07-22 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions.php: fixed the not login when open new window in some
	cases.

2011-07-22  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_marquee.php: Fixed a sql error
	of the events marquee when no groups in the system

2011-07-21  Sergio Martin <sergio.martin@artica.es>

	* godmode/users/profile_list.php
	godmode/users/configure_profile.php: Fixed url sec into
	profile management and target screen when create, update
	or delete a profile for bug 3372293

2011-07-21  Sergio Martin <sergio.martin@artica.es>

	* operation/incidents/incident.list.php: fixed table
	displayed instead of a message for bug 3372155

2011-07-21  Sergio Martin <sergio.martin@artica.es>

	* include/functions_users.php
	extensions/module_groups.php
	godmode/groups/modu_group_list.php
	godmode/groups/group_list.php
	godmode/alerts/alert_commands.php
	godmode/setup/os.list.php
	godmode/setup/news.php
	godmode/users/profile_list.php
	godmode/modules/manage_network_components.php
	godmode/modules/manage_nc_groups.php: Fixed several lonely 
	headers when no data and other no data little bugs for 3371455

2011-07-21  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_config.php: Set dbtype to mysql by default
	  (necessary for 3.2.1 to 4.0 upgrades).

2011-07-21  Ramon Novoa  <rnovoa@artica.es>

	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: Fixed a typo.
